# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

Apache HCatalog Change Log

Trunk (unreleased changes)

  INCOMPATIBLE CHANGES

  NEW FEATURES
  HCAT-546 Rework HCatalog's JMS Notifications (mithunr via gates) 

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES
  HCAT-554 Loading data using HCatLoader() from a table on non default namenode fails. (amalakar via avandana)

Release 0.5.0 - Unreleased

  INCOMPATIBLE CHANGES

  NEW FEATURES
  HCAT-364 HCatalog pig adapter should handle boolean fields (traviscrawford)

  HCAT-515 Upgrade hadoop23 version to use 0.23.3 (cdrome via toffer)

  HCAT-132 Add HCatalog to Maven Repository (traviscrawford)

  HCAT-375 Make HCat work for Hadoop 0.23 (cdrome via toffer)

  HCAT-469 HiveClientCache may return a closed client (amalakar via toffer)

  HCAT-370 Create a HiveMetaStoreClient cache in hcatalog (amalakar via toffer) 

  HCAT-419 Java APIs for HCatalog DDL commands (avandana via toffer)

  HCAT-182 Web services interface for HCatalog access and Pig, Hive, and MR job execution (ctdean, Rachel Gollub, and thejas via gates)

  HCAT-328 HCatLoader should report its input size so pig can estimate the number of reducers (traviscrawford via gates)

  HCAT-427 Document storage-based authorization (lefty via gates)

  IMPROVEMENTS
  HCAT-549 rename webhcat config and shell scripts to use webhcat in the names (thejas via gates)

  HCAT-446 Enforce apache headers for all HCatalog code (traviscrawford via gates)

  HCAT-564 test.sh should let users specify the ant version (traviscrawford)

  HCAT-527 InputJobInfo should not be public (traviscrawford)

  HCAT-560 HCatClient should support addition of new columns to a Table.(mithunr via avandana)

  HCAT-558 Update test.sh to test from an extracted src-release (traviscrawford)

  HCAT-557 add modules to maven pom (toffer)
