@@ -20,6 +20,7 @@ package org.apache.hadoop.mapred;
 
 import java.io.IOException;
 import java.net.InetSocketAddress;
+import java.security.PrivilegedExceptionAction;
 
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.ipc.RPC;
@@ -30,23 +31,29 @@ import org.apache.hadoop.security.UserGroupInformation;
  * Communicate with the JobTracker as a specific user.
  */
 public class TempletonJobTracker {
-    private JobSubmissionProtocol cnx;
+    private final JobSubmissionProtocol cnx;
 
     /**
      * Create a connection to the Job Tracker.
      */
-    public TempletonJobTracker(UserGroupInformation ugi,
-                               InetSocketAddress addr,
-                               Configuration conf)
-        throws IOException {
-        cnx = (JobSubmissionProtocol)
-            RPC.getProxy(JobSubmissionProtocol.class,
-                JobSubmissionProtocol.versionID,
-                addr,
-                ugi,
-                conf,
-                NetUtils.getSocketFactory(conf,
-                    JobSubmissionProtocol.class));
+    public TempletonJobTracker(final InetSocketAddress addr,
+                               final Configuration conf)
+        throws IOException, InterruptedException {
+
+        UserGroupInformation ugi = UserGroupInformation.getLoginUser();
+        cnx = 
+            ugi.doAs(new PrivilegedExceptionAction<JobSubmissionProtocol>() {
+                    public JobSubmissionProtocol run ()
+                        throws IOException, InterruptedException {
+                        return (JobSubmissionProtocol)
+                            RPC.getProxy(JobSubmissionProtocol.class,
+                                        JobSubmissionProtocol.versionID,
+                                        addr,
+                                        conf,
+                                        NetUtils.getSocketFactory(conf,
+                                                JobSubmissionProtocol.class));
+                    }
+                });
     }
 
     /**
