@@ -62,7 +62,7 @@ import org.apache.hcatalog.templeton.tool.ZooKeeperStorage;
  */
 public class AppConfig extends Configuration {
     public static final String[] HADOOP_CONF_FILENAMES = {
-        "core-default.xml", "core-site.xml", "mapred-default.xml", "mapred-site.xml"
+        "core-default.xml", "core-site.xml", "mapred-default.xml", "mapred-site.xml", "hdfs-site.xml"
     };
 
     public static final String[] HADOOP_PREFIX_VARS = {
