@@ -147,12 +147,33 @@ public class Main {
         ServletContextHandler root = new ServletContextHandler(server, "/");
 
         // Add the Auth filter
-        root.addFilter(makeAuthFilter(), "/*", FilterMapping.REQUEST);
+        FilterHolder fHolder = makeAuthFilter();
+
+        /* 
+         * We add filters for each of the URIs supported by templeton.
+         * If we added the entire sub-structure using '/*', the mapreduce 
+         * notification cannot give the callback to templeton in secure mode.
+         * This is because mapreduce does not use secure credentials for 
+         * callbacks. So jetty would fail the request as unauthorized.
+         */ 
+        root.addFilter(fHolder, "/" + SERVLET_PATH + "/v1/ddl/*", 
+                       FilterMapping.REQUEST);
+        root.addFilter(fHolder, "/" + SERVLET_PATH + "/v1/pig/*", 
+                       FilterMapping.REQUEST);
+        root.addFilter(fHolder, "/" + SERVLET_PATH + "/v1/hive/*", 
+                       FilterMapping.REQUEST);
+        root.addFilter(fHolder, "/" + SERVLET_PATH + "/v1/queue/*", 
+                       FilterMapping.REQUEST);
+        root.addFilter(fHolder, "/" + SERVLET_PATH + "/v1/mapreduce/*", 
+                       FilterMapping.REQUEST);
+        root.addFilter(fHolder, "/" + SERVLET_PATH + "/v1/status/*", 
+                       FilterMapping.REQUEST);
+        root.addFilter(fHolder, "/" + SERVLET_PATH + "/v1/version/*", 
+                       FilterMapping.REQUEST);
 
         // Connect Jersey
         ServletHolder h = new ServletHolder(new ServletContainer(makeJerseyConfig()));
         root.addServlet(h, "/" + SERVLET_PATH + "/*");
-
         // Add any redirects
         addRedirects(server);
 
