@@ -679,7 +679,8 @@ public class Server {
     @Path("queue/{jobid}")
     @Produces({MediaType.APPLICATION_JSON})
     public QueueStatusBean showQueueId(@PathParam("jobid") String jobid)
-        throws NotAuthorizedException, BadParam, IOException {
+        throws NotAuthorizedException, BadParam, IOException, InterruptedException {
+        
         verifyUser();
         verifyParam(jobid, ":jobid");
 
@@ -694,7 +695,8 @@ public class Server {
     @Path("queue/{jobid}")
     @Produces({MediaType.APPLICATION_JSON})
     public QueueStatusBean deleteQueueId(@PathParam("jobid") String jobid)
-        throws NotAuthorizedException, BadParam, IOException {
+        throws NotAuthorizedException, BadParam, IOException, InterruptedException {
+        
         verifyUser();
         verifyParam(jobid, ":jobid");
 
@@ -709,7 +711,8 @@ public class Server {
     @Path("queue")
     @Produces({MediaType.APPLICATION_JSON})
     public List<String> showQueueList()
-        throws NotAuthorizedException, BadParam, IOException {
+        throws NotAuthorizedException, BadParam, IOException, InterruptedException {
+        
         verifyUser();
 
         ListDelegator d = new ListDelegator(appConf);
