@@ -27,7 +27,6 @@ import org.apache.hadoop.mapred.JobProfile;
 import org.apache.hadoop.mapred.JobStatus;
 import org.apache.hadoop.mapred.JobTracker;
 import org.apache.hadoop.mapred.TempletonJobTracker;
-import org.apache.hadoop.security.UserGroupInformation;
 import org.apache.hcatalog.templeton.tool.JobState;
 
 /**
@@ -41,14 +40,13 @@ public class StatusDelegator extends TempletonDelegator {
     }
 
     public QueueStatusBean run(String user, String id)
-        throws NotAuthorizedException, BadParam, IOException {
-        UserGroupInformation ugi = UserGroupInformation.createRemoteUser(user);
+        throws NotAuthorizedException, BadParam, IOException, InterruptedException
+    {
         TempletonJobTracker tracker = null;
         JobState state = null;
         try {
-            tracker = new TempletonJobTracker(ugi,
-                JobTracker.getAddress(appConf),
-                appConf);
+            tracker = new TempletonJobTracker(JobTracker.getAddress(appConf),
+                                              appConf);
             JobID jobid = StatusDelegator.StringToJobID(id);
             if (jobid == null)
                 throw new BadParam("Invalid jobid: " + id);
